k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-app
  labels:
    app: nuxt-app
spec:
  replicas: 2 # Adjust as needed
  selector:
    matchLabels:
      app: nuxt-app
  template:
    metadata:
      labels:
        app: nuxt-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nuxt-app
          image: cybercowboy13/aitoolsite:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # Or the port your Nuxt app uses
