k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m # Set maximum body size for requests
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600' # Set read timeout for backend service
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600' # Set send timeout for backend service
    nginx.ingress.kubernetes.io/limit-connections: '20' # Limit the number of simultaneous connections
    nginx.ingress.kubernetes.io/limit-rpm: '60' # Limit the number of requests per minute
spec:
  ingressClassName: nginx
  rules:
    - host: aitoolsite.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nuxt-app-service
                port:
                  number: 80
    - host: www.aitoolsite.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nuxt-app-service
                port:
                  number: 80
